--- a/src/macosx/install.txt
+++ b/src/macosx/install.txt
@@ -1,8 +1,24 @@
-set(EXTRA_FILES ${EXTRA_FILES} macosx/icon.icns)
+# icns creation
+find_program(ICONUTIL_EXECUTABLE iconutil DOC "Xcode iconutil binary")
+add_custom_command(OUTPUT icon.icns
+	COMMAND ${ICONUTIL_EXECUTABLE} -c icns -o icon.icns ${CMAKE_CURRENT_SOURCE_DIR}/macosx/icon.iconset
+	COMMENT "Building icns"
+	DEPENDS
+		macosx/icon.iconset/icon_16x16.png
+		macosx/icon.iconset/icon_16x16@2x.png
+		macosx/icon.iconset/icon_32x32.png
+		macosx/icon.iconset/icon_32x32@2x.png
+		macosx/icon.iconset/icon_256x256.png
+		macosx/icon.iconset/icon_256x256@2x.png
+		macosx/icon.iconset/icon_512x512.png
+		macosx/icon.iconset/icon_512x512@2x.png
+)
+
+
+set(EXTRA_FILES ${EXTRA_FILES} icon.icns)
 set(MACOSX_BUNDLE_ICON_FILE icon.icns)
-set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/macosx/icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
+set_source_files_properties(icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
 
 string(REPLACE "-framework Cocoa" "" DIRS ${SDL_LIBRARY})
 
-install(FILES ${OUTPUT_DIR}/ecwolf.pk3 DESTINATION ${OUTPUT_DIR}/ecwolf.app/Contents/MacOS COMPONENT Runtime)
 install(CODE "include(BundleUtilities)\nfixup_bundle(\"${OUTPUT_DIR}/ecwolf.app\" \"\" \"${DIRS}\")" COMPONENT Runtime)
