Reworked LocateSDL2.cmake so that vendored libs can be mixed with system libs or SDL 1.2 Fixed some OS X build issues

--- a/src/macosx/install.txt
+++ b/src/macosx/install.txt
@@ -19,6 +19,8 @@ set(EXTRA_FILES ${EXTRA_FILES} icon.icns)
 set(MACOSX_BUNDLE_ICON_FILE icon.icns)
 set_source_files_properties(icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
 
-string(REPLACE "-framework Cocoa" "" DIRS ${SDL_LIBRARY})
+if(SDL_LIBRARY)
+	string(REPLACE "-framework Cocoa" "" DIRS ${SDL_LIBRARY})
+endif()
 
 install(CODE "include(BundleUtilities)\nfixup_bundle(\"${OUTPUT_DIR}/ecwolf.app\" \"\" \"${DIRS}\")" COMPONENT Runtime)
