--- a/docs/ecwolf.6
+++ b/docs/ecwolf.6
@@ -1,13 +1,13 @@
-.TH ecwolf 6
+.TH lzwolf 6
 .SH NAME
-ecwolf - Advanced Wolfenstein 3D source port
+lzwolf - Advanced Wolfenstein 3D source port
 
 .SH SYNOPSIS
-.B ecwolf
+.B lzwolf
 [\fIoptions\fR] [\fIfiles\fR ...]
 
 .SH DESCRIPTION
-.B ecwolf
+.B lzwolf
 is an advanced source port of the Wolfenstein 3D engine based upon Wolf4SDL
 with some back ports from ZDoom. It provides substantially boosted capabilities
 for creating mods without requiring source code edits using scripting and other
@@ -28,7 +28,7 @@ Use the --help option for a complete list of options.
 The original game data files are required for operation. These are files with
 the extensions *.n3d, *.sod, *.sd2, *.sd3, *.wl1, or *.wl6. They should be
 placed either in
-.IR ~/.config/ecwolf
+.IR ~/.config/lzwolf
 or
 .IR /usr/local/share/games/wolf3d .
 
@@ -36,4 +36,4 @@ If you do not have these files they can be acquired at https://www.gog.com or
 through Steam.
 
 .SH BUGS
-The bug tracker is located at https://bitbucket.org/ecwolf/ecwolf/issues
+The bug tracker is located at https://bitbucket.org/lzwolf/lzwolf/issues
